hphp/test/zend/bad/ext-spl/SplFileObject_rewind_error001.php
<?php

file_put_contents('testdata.csv', 'eerste;tweede;derde');

$fo = new SplFileObject('testdata.csv');

$fo->rewind( "invalid" );

?>